--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 # a test version of the app.yaml used for development. This is not intended to be checked in
-application: ibde3app
+application: vthapp
 
 version: 1
 runtime: python
